# solis-cloud-control

./: .gitignore  README.md  hacs.json  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
config/: configuration.yaml
custom_components/solis_cloud_control/: __init__.py  api.py  const.py  manifest.json  services.yaml  utils.py
scripts/: run
tests/: test_always_pass.py
