[project]
name = "solis-cloud-control"
version = "0.0.1"
requires-python = "~=3.13"
dependencies = ["homeassistant==2025.3.3"]


[tool.uv]
dev-dependencies = [
    "pytest==8.3.3",
    "pytest-asyncio==0.25.3",
    "pytest-cov==6.0.0",
    "ruff==0.7.4",
    "uv==0.6.1",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
addopts = "--cov=example --cov-branch"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "ANN", # flake8-annotations
    "ARG", # flake8-argument-names    
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "TCH", # flake8-type-checking
    "PYI", # flake8-pyi
    "Q",   # flake8-quotes    
    "UP",  # pyupgrade
    "N",   # pep8-naming
]
per-file-ignores = { "custom_components/**/*.py" = [
    "ANN101",
], "tests/*.py" = [
    "ANN101",
] }
